@@ -191,7 +191,19 @@
     :bottom-left-radius 8px
     :bottom-right-radius 8px
 
-  .avatar
+  input[type=text]
+    :border 1px #cfcfcf solid
+    :color grey
+    :font-size 11px
+    :padding 3px
+    :width 500px
+  textarea
+    :font-size 11px
+    :height 30px
+    :padding 3px
+    :width 500px
+
+  .gravatar
     :float left
     :padding 0px 10px 5px 0px
 
